--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Books</h1>
 
 <table>
@@ -14,8 +16,8 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to 'Show', book, class: "show_#{book.id}" %></td>
-        <td><%= link_to 'Edit', edit_book_path, class: "edit_#{book.id}" %></td>
+        <td><%= link_to 'Show', book_path(book.id), class: "show_#{book.id}" %></td>
+        <td><%= link_to 'Edit', edit_book_path(book.id), class: "edit_#{book.id}" %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }, class: "destroy_#{book.id}" %></td>
       </tr>
     <% end %>
@@ -24,4 +26,4 @@
 
 
 <h2>New book</h2>
-<%= render 'form' %>
+<%= render 'books/form', book: @book %>
