--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,14 @@
-<p><strong>Title: </strong><%= @book.title %></p>
-<p><strong>Body: </strong><%= @book.body %></p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Title:</strong>
+  <%= @book.title %>
+</p>
+
+<p>
+  <strong>Body:</strong>
+  <%= @book.body %>
+</p>
 
 <%= link_to 'Edit', edit_book_path(@book), class: "edit_#{@book.id}" %> |
 <%= link_to 'Back', books_path, class: "back" %>
